Fix code smells according to sonarcloud.
Request: MO
Change-Id: I288300843ca0dc4df486e0b13a9b80b88e928655